--- a/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
@@ -392,7 +392,7 @@
         <!--Scanning View Controller-->
         <scene sceneID="uxE-Cx-ZVn">
             <objects>
-                <viewController id="Sli-Ax-YQY" userLabel="Scanning View Controller" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScanningViewController" id="Sli-Ax-YQY" userLabel="Scanning View Controller" customClass="ScanningViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EwX-6f-W1Y"/>
                         <viewControllerLayoutGuide type="bottom" id="iVA-Do-3xN"/>
@@ -400,8 +400,30 @@
                     <view key="view" contentMode="scaleToFill" id="2Dd-3q-jjF">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gNe-EY-2mb" userLabel="Camera View">
+                                <rect key="frame" x="20" y="20" width="560" height="560"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="gNe-EY-2mb" secondAttribute="height" multiplier="1:1" id="rdO-ec-Nui"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gNe-EY-2mb" firstAttribute="centerX" secondItem="2Dd-3q-jjF" secondAttribute="centerX" id="ZfM-nD-2cW"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gNe-EY-2mb" secondAttribute="trailing" id="gRf-g4-3Gw"/>
+                            <constraint firstItem="gNe-EY-2mb" firstAttribute="top" secondItem="EwX-6f-W1Y" secondAttribute="bottom" constant="20" id="sio-Os-7JS"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="gNe-EY-2mb" secondAttribute="leading" id="tAD-HS-Phl"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="GeneralView"/>
+                        </userDefinedRuntimeAttributes>
                     </view>
+                    <navigationItem key="navigationItem" title="Scanning a decryption key" id="QxJ-hQ-2ex"/>
+                    <connections>
+                        <outlet property="cameraView" destination="gNe-EY-2mb" id="8YD-Cp-nyq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DUu-Jd-zXW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
