--- a/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
@@ -395,12 +395,12 @@
         <!--Scanning View Controller-->
         <scene sceneID="uxE-Cx-ZVn">
             <objects>
-                <viewController storyboardIdentifier="ScanningViewController" id="Sli-Ax-YQY" userLabel="Scanning View Controller" customClass="ScanningViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScanningViewController" hidesBottomBarWhenPushed="YES" id="Sli-Ax-YQY" userLabel="Scanning View Controller" customClass="ScanningViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EwX-6f-W1Y"/>
                         <viewControllerLayoutGuide type="bottom" id="iVA-Do-3xN"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="2Dd-3q-jjF">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="2Dd-3q-jjF">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -452,14 +452,30 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="TranslucentBlackView:CounterLabel"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="TranslucentBlackView:ScanningTopLabel"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QwA-XF-sP8">
+                                <rect key="frame" x="-22" y="20" width="100" height="44"/>
+                                <inset key="contentEdgeInsets" minX="44" minY="0.0" maxX="22" maxY="0.0"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="TranslucentBlackView:ScanningTopLabel"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="onBack:" destination="Sli-Ax-YQY" eventType="touchUpInside" id="yUt-5a-PSa"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.49050317784689451" green="0.63846367385786795" blue="0.17061611553021444" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="QwA-XF-sP8" firstAttribute="top" secondItem="mGO-bB-SqJ" secondAttribute="top" id="CpQ-Vk-zSV"/>
+                            <constraint firstItem="QwA-XF-sP8" firstAttribute="leading" secondItem="2Dd-3q-jjF" secondAttribute="leadingMargin" constant="-42" id="DFh-c0-h5U"/>
                             <constraint firstAttribute="trailing" secondItem="dGf-eP-IyT" secondAttribute="trailing" id="IFB-6g-rHO"/>
                             <constraint firstItem="iVA-Do-3xN" firstAttribute="top" secondItem="dGf-eP-IyT" secondAttribute="bottom" id="Lay-BN-Nn2"/>
+                            <constraint firstItem="QwA-XF-sP8" firstAttribute="height" secondItem="mGO-bB-SqJ" secondAttribute="height" id="hdi-a2-LKI"/>
                             <constraint firstItem="mGO-bB-SqJ" firstAttribute="centerX" secondItem="2Dd-3q-jjF" secondAttribute="centerX" id="jX9-uB-agH"/>
                             <constraint firstItem="dGf-eP-IyT" firstAttribute="leading" secondItem="2Dd-3q-jjF" secondAttribute="leading" id="kBE-kc-S0Y"/>
                             <constraint firstItem="mGO-bB-SqJ" firstAttribute="top" secondItem="EwX-6f-W1Y" secondAttribute="bottom" constant="20" id="sIc-4a-pPM"/>
