Create correct toolbar

--- a/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
@@ -8,7 +8,7 @@ tools:context=".LibraryActivity"
     android:background="@color/colorBackGround">
 
 
-<include layout="@layout/library_toolbar" />
+<include layout="@layout/toolbar" />
 
     <LinearLayout android:id="@+id/home_buttons_container"
                   android:layout_width="match_parent"
