--- a/GroupLockApplication/app/src/main/res/layout/activity_settings.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
     tools:context=".SettingsActivity"
     android:background="@color/colorBackGround">
 
-    <include layout="@layout/library_toolbar" />
+    <include layout="@layout/toolbar" />
 
     <Switch
         android:id="@+id/switchPass"
