--- a/GroupLockApplication/app/src/main/res/menu/home_menu.xml
+++ b/GroupLockApplication/app/src/main/res/menu/home_menu.xml
@@ -1,31 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-                <!-- Home / will display always -->
                 <item android:id="@+id/home"
+                    android:icon="@drawable/ic_home_black_24dp"
                     android:title="@string/activity_home"
                     app:showAsAction="ifRoom" />
 
-                <!--Library / will display always -->
                 <item android:id="@+id/library"
                     android:title="@string/activity_library"
+                    android:icon="@drawable/ic_library_books_black_24dp"
                     app:showAsAction="ifRoom"/>
 
-                <!-- Info -->
-                <item android:id="@+id/info"
-                    android:title="@string/activity_info"
-                    android:icon="@drawable/ic_info_outline_black_24dp"
-                    app:showAsAction="ifRoom"/>
-
-                <!-- Settings -->
                 <item android:id="@+id/settings"
                     android:title="@string/activity_settings"
+                    android:icon="@drawable/ic_settings_black_24dp"
                     app:showAsAction="never" />
-
-                <item android:id="@+id/qr"
-                    android:title="Qr"
-                    app:showAsAction="ifRoom" />
     </menu>
