--- a/GroupLockApplication/app/src/main/res/layout/library_layout.xml
+++ b/GroupLockApplication/app/src/main/res/layout/library_layout.xml
@@ -7,35 +7,27 @@
     tools:context=".LibraryActivity"
     android:background="@color/colorBackGround">
 
-    <android.support.v7.widget.Toolbar
+ <!--   <android.support.v7.widget.Toolbar
             android:id="@+id/library_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorToolbar"
             android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>-->
+    <include layout="@layout/toolbar"/>
 
-    <TextView android:id="@+id/current_location_in_library"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dip"
-        android:layout_below="@id/library_toolbar"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:textSize="@dimen/abc_text_size_medium_material" />
-
-    <GridView android:id="@+id/entries_list_view"
+   <GridView android:id="@+id/entries_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/current_location_in_library"
         android:numColumns="2"
         android:horizontalSpacing="10dp"
         android:verticalSpacing="10dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:drawSelectorOnTop="false" />
+        android:drawSelectorOnTop="false"
+        android:layout_below="@id/toolbar"
+       android:layout_marginTop="60dp" />
 
     <Button
         android:layout_width="72dp"
