--- a/GroupLockApplication/app/src/main/res/layout/load_layout.xml
+++ b/GroupLockApplication/app/src/main/res/layout/load_layout.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorBackGround">
 
 
-  <include layout="@layout/library_toolbar" />
+  <include layout="@layout/toolbar" />
     <!--     <android.support.v7.widget.Toolbar
            android:id="@+id/keys_type_selection_toolbar"
            android:layout_width="match_parent"
